2024-08-22  Akkana Peck  <akkana@shallowsky.com>
	New config variable allow_dup_titles.
	Allow guid as unique id.
	Accept <link> as well as <links>.

2024-02-12  Akkana Peck  <akkana@shallowsky.com>
	Add html_index_links, an option that allows feeding from an
	HTML page rather than RSS/Atom.

2024-01-07  Akkana Peck  <akkana@shallowsky.com>
	Add multipage_pat, for sites that spread stories over multiple pages.

2023-12-17  Akkana Peck  <akkana@shallowsky.com>
	Add new levels=1.5 stage, to not fetch story pages for sites
	that put the entire story in the feed.
	Bump version to 1.1b6.

2023-12-15  Akkana Peck  <akkana@shallowsky.com>
	Refactoring, and rename feedmeparser to pageparser.

2023-12-12  Akkana Peck  <akkana@shallowsky.com>
	More improvement on not showing nonlocal images.

2023-12-05  Akkana Peck  <akkana@shallowsky.com>
	Continuing work on showing something in the index file
	when stories couldn't be fetched.

	urlrss: better local operation (helpful for testing).

2023-07-21  Akkana Peck  <akkana@shallowsky.com>
	Use BeautifulSoup for parsing.

2023-07-20  Akkana Peck  <akkana@shallowsky.com>
	Smarter handling of nonlocal images.
	(Work continues for a few months.)

2023-05-18  Akkana Peck  <akkana@shallowsky.com>
	Add a new config variable, skip_nodes, to skip whole parsed
	nodes and all children.

2023-05-11  Akkana Peck  <akkana@shallowsky.com>
	Show images in index page as well as sub-pages.

2022-11-05  Akkana Peck  <akkana@shallowsky.com>
	Show images in index page as well as sub-pages, if RSS has images.

2022-09-09  Akkana Peck  <akkana@shallowsky.com>
	Various tweaks to handle images from Wordpress plugins
	that don't use img src.

2021-10-07  Akkana Peck  <akkana@shallowsky.com>
	Implement page and feed helpers, including a page helper
	that uses selenium for the New York Times.

2021-06-07  Akkana Peck  <akkana@shallowsky.com>
	New site variable, allow_repeats.

2021-11-11  Akkana Peck  <akkana@shallowsky.com>