@@ -273,6 +273,11 @@ allow_repeats:
     Scale down any images whose width or height (in pixels) is greater
     than this. Default is 1200; set to 0 to not scale down at all.
 
+<dt>
+  png_to_jpg
+<dd>
+  Convert PNG to JPG, even if the PNG supposedly had transparency.
+
 </dl>
 
 
