@@ -282,7 +282,6 @@ def get_feed(feedname, cache, last_time, msglog):
     if not sitefeedurl:
         fakefeedname = None
         if os.path.exists(feedname):
-            print("feedname is", feedname, "and it exists")
             # XXX This clause will accept the full path to a .conf file as
             # a commandline argument -- but that file will only be
             # used for the feed name, not for the actual feed parameters
@@ -292,7 +291,6 @@ def get_feed(feedname, cache, last_time, msglog):
             # is warranted given that I never actually expect to use
             # config files from outside the configdir.
             fakefeedname = parse_name_from_conf_file(feedname)
-            print("fakefeedname is", fakefeedname)
             if fakefeedname:
                 msglog.warn("Warning: Using name '%s' from %s,"
                             " but config parameters will actually be parsed "
