@@ -4,7 +4,7 @@ page_start = data-elementor-type="single".*?>
 page_end = <span class="elementor-screen-only">Search</span>
 	<div [^<>]*data-widget_type="divider.default">
 skip_images = false
-nonlocal_images = True
+nonlocal_images = true
 # allow_gzip = false
 simplify_rss = true
 rss_entry_size = 1000
@@ -13,3 +13,8 @@ rss_entry_size = 1000
 # to reduce download size. It doesn't matter what pixel size it's set to,
 # so if you don't want image resizing, set it to a larger number.
 max_image_size = 1024
+
+# feedme has logic to convert PNGs if they're not transparent,
+# but LADP makes even some of their photo images transparent.
+png_to_jpg = true
+
